Adding first part of burgers page

--- a/FoodDrinkMenu.iOS/FoodDrinkMenu.iOS.csproj
+++ b/FoodDrinkMenu.iOS/FoodDrinkMenu.iOS.csproj
@@ -124,8 +124,11 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.540366" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="Xamarin.Forms.PancakeView">
+      <Version>1.0.21</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -133,5 +136,10 @@
       <Project>{8C68F550-09AC-4A92-97CF-85C61ADAE28F}</Project>
       <Name>FoodDrinkMenu</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="star.png" />
+    <BundleResource Include="clock.png" />
+    <BundleResource Include="burger.png" />
   </ItemGroup>
 </Project>
