--- a/FoodDrinkMenu.Android/FoodDrinkMenu.Android.csproj
+++ b/FoodDrinkMenu.Android/FoodDrinkMenu.Android.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.540366" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
@@ -94,6 +94,8 @@
     <AndroidResource Include="Resources\drawable\star.png" />
     <AndroidResource Include="Resources\drawable\clock.png" />
     <AndroidResource Include="Resources\drawable\burger.png" />
+    <AndroidResource Include="Resources\drawable\salad.png" />
+    <AndroidResource Include="Resources\drawable\fries.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
